[package]
name = "gasket-lb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.1"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
axum = "0.7.4"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
json-patch = "*"
reqwest = { version = "0.11.24", features = ["json"] }
tower-http = { version = "0.5.2", features = ["cors"] }
chrono = "0.4.35"
rand = "0.8.5"
